Fixed #36 with a smidge of logo padding, eResearch logo now safe from wrapping oddly.

--- a/webapplication/app/webroot/css/edgarfullscreen.less
+++ b/webapplication/app/webroot/css/edgarfullscreen.less
@@ -313,6 +313,10 @@ html, body {
     margin: 0.5em 2em;
 }
 
+.unpaddedlogo {
+    padding: 15px 0;
+}
+
 .triggeredtab .funding {
     padding-top: 2em;
     font-size: 75%;
